# halftone_images

./: CMakeLists.txt  main.cpp
include/: halftone.h  matrix.h
include/halftone/: halftone.cpp  halftone.h
include/matrix/: matrix.cc  matrix.cpp  matrix.h
src/: matrix.cc
